--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../gemfrenzytutobeta/Un-gamejam 2.exe"
+export_path="../panchajuego-beta/gemfrenzy.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
