--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,12 +22,12 @@ variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
-html/custom_html_shell=""
+html/custom_html_shell="res://customWebExport/index.html"
 html/head_include=""
 html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
+html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
