--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../PRUEBAREDSOCIAL/index.html"
+export_path="../index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -21,7 +21,7 @@ custom_template/release=""
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=true
+html/export_icon=false
 html/custom_html_shell="res://customWebExport/index.html"
 html/head_include=""
 html/canvas_resize_policy=2
