--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,33 +3,37 @@
 name="Web"
 platform="Web"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../gem_frenzy_itch_coso/index.html"
+export_path="../Gem-Frenzy_Export/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
+variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=false
+html/export_icon=true
 html/custom_html_shell="res://customWebExport/index.html"
 html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=true
-progressive_web_app/enabled=true
+progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=false
 progressive_web_app/offline_page=""
-progressive_web_app/display=1
+progressive_web_app/display=3
 progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
@@ -41,6 +45,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -51,6 +56,7 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.1.options]
 
@@ -58,10 +64,8 @@ custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
 binary_format/embed_pck=false
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -81,6 +85,8 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
+application/export_d3d12=0
+application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
@@ -98,3 +104,7 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+texture_format/bptc=true
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
