--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -109,7 +109,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="EXPORTS/android/Gem Frenzy.apk"
+export_path="EXPORTS/android/Gem Frenzy.aab"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -119,15 +119,15 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-gradle_build/use_gradle_build=false
-gradle_build/export_format=0
+gradle_build/use_gradle_build=true
+gradle_build/export_format=1
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=1
+version/code=2
 version/name="Gem Frenzy"
 package/unique_name="yippies.GemFrenzy"
 package/name="Gem Frenzy"
