--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../Gem-frenzybeta/index.html"
+export_path="EXPORTS/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -20,13 +20,13 @@ custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
+vram_texture_compression/for_mobile=true
 html/export_icon=false
 html/custom_html_shell="res://customWebExport/index.html"
 html/head_include=""
-html/canvas_resize_policy=2
+html/canvas_resize_policy=1
 html/focus_canvas_on_start=false
-html/experimental_virtual_keyboard=true
+html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
