--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -24,7 +24,7 @@ vram_texture_compression/for_mobile=true
 html/export_icon=false
 html/custom_html_shell="res://customWebExport/index.html"
 html/head_include=""
-html/canvas_resize_policy=1
+html/canvas_resize_policy=2
 html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=true
@@ -109,7 +109,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="EXPORTS/android/Gem Frenzy.aab"
+export_path="EXPORTS/android/Gem Frenzy less disk.aab"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
