Pancha hizo dieta y ahora pesa 12mb

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,8 @@ platform="Web"
 runnable=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray("res://addons/godot-firebase/firebase/firebase.tscn", "res://addons/http-sse-client/HTTPSSEClient.tscn", "res://addons/SpritesheetGenerator/SpritesheetFrame.tscn", "res://addons/SpritesheetGenerator/SpritesheetGenerator.tscn", "res://Escenas/Cofre/cofre.tscn", "res://Escenas/Horno/horno.tscn", "res://Escenas/obstaculos/slimes/TierAslime1.tscn", "res://Escenas/obstaculos/slimes/TierAslime2.tscn", "res://Escenas/obstaculos/slimes/TierAslime3.tscn", "res://Escenas/obstaculos/slimes/TierBslime1.tscn", "res://Escenas/obstaculos/slimes/TierBslime2.tscn", "res://Escenas/obstaculos/slimes/TierBslime3.tscn", "res://Escenas/obstaculos/slimes/TierCslime1.tscn", "res://Escenas/obstaculos/slimes/TierCslime2.tscn", "res://Escenas/obstaculos/slimes/TierCslime3.tscn", "res://Escenas/Rockola/rockola.tscn", "res://Escenas/Ventana por Orden/orden_ui.tscn", "res://Escenas/game_start.tscn", "res://Escenas/MainJuego.tscn", "res://Escenas/tutorial.tscn", "res://Escenas/UI.tscn", "res://FinalizarDia/MejoraUI.tscn", "res://Logica/Player/player.tscn", "res://Logica/UI/h_box_name_and_day.tscn", "res://Logica/cliente_body.tscn", "res://Logica/gato.tscn", "res://Order/order.tscn", "res://OrderManager/order_manager.tscn", "res://Particulas/minningParticle.tscn", "res://Sprites/Recursos/minerales_sprites.tscn", "res://intro_anim.tscn", "res://outro_anim.tscn")
 include_filter="*.env"
 exclude_filter=""
 export_path="EXPORTS/index.html"
@@ -17,7 +18,7 @@ encrypt_directory=false
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="F:/Archivos_personales/PROG/GemFrenzy/customWebExport/web_release.zip"
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=true
