build rng mejora recicle

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../Gem-frenzybeta/index.html"
+export_path="EXPORTS/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -27,7 +27,7 @@ html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=true
+progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../gemfrenzy_windows/gemfrenzy.exe"
+export_path="../gemfrenzy.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
