--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="EXPORTS/index.html"
+export_path="../Gem-frenzybeta/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
