--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../Gem-frenzybeta/index.html"
+export_path="EXPORTS/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -19,7 +19,7 @@ script_export_mode=2
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="F:/Archivos_personales/PROG/Godot/Godot 4.3 Dev 6/TemplateGemFrenzyRelease.zip"
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
@@ -31,6 +31,7 @@ html/canvas_resize_policy=2
 html/focus_canvas_on_start=false
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=3
 progressive_web_app/orientation=0
@@ -109,6 +110,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 name="Android"
 platform="Android"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -119,12 +121,16 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.2.options]
 
 custom_template/debug=""
 custom_template/release=""
 gradle_build/use_gradle_build=true
+gradle_build/gradle_build_directory=""
+gradle_build/android_source_template=""
+gradle_build/compress_native_libraries=false
 gradle_build/export_format=1
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
@@ -240,6 +246,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
@@ -311,6 +318,7 @@ permissions/write_user_dictionary=false
 name="macOS"
 platform="macOS"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -321,6 +329,7 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.3.options]
 
@@ -341,6 +350,7 @@ application/copyright_localized={}
 application/min_macos_version="10.12"
 application/export_angle=0
 display/high_res=true
+application/additional_plist_content=""
 xcode/platform_build="14C18"
 xcode/sdk_version="13.1"
 xcode/sdk_build="22C55"
