quitar receta dia 8 y menos speed up musica
renta un poco menos

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -19,7 +19,7 @@ script_export_mode=2
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release="F:/Archivos_personales/PROG/Godot/Godot 4.3 Dev 6/TemplateGemFrenzyRelease.zip"
+custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
