--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -14,12 +14,12 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="F:/Archivos_personales/PROG/GemFrenzy/customWebExport/noNav.zip"
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
