PlayStore Console player fix  y prueba 1

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="EXPORTS/android/both.aab"
+export_path="EXPORTS/android/GemConPlayConsole.aab"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -138,7 +138,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=3
+version/code=4
 version/name="Gem Frenzy"
 package/unique_name="yippies.GemFrenzy"
 package/name="Gem Frenzy"
@@ -231,7 +231,7 @@ permissions/install_location_provider=false
 permissions/install_packages=false
 permissions/install_shortcut=false
 permissions/internal_system_window=false
-permissions/internet=true
+permissions/internet=false
 permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
