--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="EXPORTS/android/GemConPlayConsole.aab"
+export_path="../GF-android/GemConPlayConsole.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -131,14 +131,14 @@ gradle_build/use_gradle_build=true
 gradle_build/gradle_build_directory=""
 gradle_build/android_source_template=""
 gradle_build/compress_native_libraries=false
-gradle_build/export_format=1
+gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=4
+version/code=5
 version/name="Gem Frenzy"
 package/unique_name="yippies.GemFrenzy"
 package/name="Gem Frenzy"
@@ -151,7 +151,7 @@ package/show_in_app_library=true
 package/show_as_launcher_app=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/adaptive_background_432x432="res://icon app 512.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 screen/immersive_mode=true
