cambio a login gamejolt pa que no crashee jeje en play

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../GF-android/GemConPlayConsole.aab"
+export_path="../GF-android/GemConPlayConsole.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -131,14 +131,14 @@ gradle_build/use_gradle_build=true
 gradle_build/gradle_build_directory=""
 gradle_build/android_source_template=""
 gradle_build/compress_native_libraries=false
-gradle_build/export_format=1
+gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=11
+version/code=12
 version/name="Gem Frenzy"
 package/unique_name="yippies.GemFrenzy"
 package/name="Gem Frenzy"
