--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../gemfrenzy.exe"
+export_path="../gem_frenzy_web/gem_frenzy_web.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
